package org.darkmentat.LandOfLords.Common;

option java_package = "org.darkmentat.LandOfLords.Common";
option java_outer_classname = "NetMessagesToClient";

enum TypeToClient { PING_CLIENT = 2; PLAYER_UNIT_STATE = 3;}

message PingClient {}
message PlayerUnitState {
    message KeyValueTupple {
        required string key = 1;
        required string value = 2;
    }

    required string GameObjectState = 1;
    repeated KeyValueTupple stateValue = 2;
}
message MessageToClient {
    required TypeToClient type = 1;

    optional PingClient ping = 2;
    optional PlayerUnitState playerUnitState = 3;
}